[gd_scene load_steps=13 format=3 uid="uid://268igu727db7"]

[ext_resource type="Script" path="res://Scenes/Enemy/Bot_01/EnemyBot1.gd" id="1_e4jwv"]
[ext_resource type="Texture2D" uid="uid://bqltrqdxqdpca" path="res://Art/Enemy/Bot_1/bot1.svg" id="2_61ifw"]
[ext_resource type="PackedScene" uid="uid://b78ktyqyvqgdo" path="res://Scenes/Components/hitbox_component.tscn" id="3_adovc"]
[ext_resource type="PackedScene" uid="uid://dbsliipb1ca80" path="res://Scenes/Components/health_component.tscn" id="4_oxotc"]
[ext_resource type="Script" path="res://Scenes/Enemy/Bot_01/BotMeleeAttack.gd" id="5_35t7t"]
[ext_resource type="Texture2D" uid="uid://d1lg8aapuoudq" path="res://Art/Enemy/Bot_1/Bot_1_Attack/Bot_1_Melee_Attack_Animation1.svg" id="6_opge2"]
[ext_resource type="Texture2D" uid="uid://bi0boj4fjv2pi" path="res://Art/Enemy/Bot_1/Bot_1_Attack/Bot_1_Melee_Attack_Animation2.svg" id="7_2uaei"]
[ext_resource type="Texture2D" uid="uid://dtyde5ktksbb6" path="res://Art/Enemy/Bot_1/Bot_1_Attack/Bot_1_Melee_Attack_Animation3.svg" id="8_spvmq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c75q"]
size = Vector2(14.1066, 13.8958)

[sub_resource type="CircleShape2D" id="CircleShape2D_x8lfr"]
radius = 112.071

[sub_resource type="SegmentShape2D" id="SegmentShape2D_n38ik"]
b = Vector2(11, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_m57wp"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("6_opge2")
}, {
"duration": 0.5,
"texture": ExtResource("7_2uaei")
}, {
"duration": 0.5,
"texture": ExtResource("8_spvmq")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Bot_1" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
platform_floor_layers = 4294967264
script = ExtResource("1_e4jwv")
move_speed = 30

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["Enemy"] instance=ExtResource("3_adovc")]
collision_layer = 2
collision_mask = 7
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-1.49012e-08, 1.49012e-08)
rotation = 0.785397
shape = SubResource("RectangleShape2D_4c75q")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
texture = ExtResource("2_61ifw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.49012e-08, 1.49012e-08)
rotation = 0.785397
scale = Vector2(0.901901, 0.901901)
shape = SubResource("RectangleShape2D_4c75q")

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource("CircleShape2D_x8lfr")
debug_color = Color(0.447059, 0.596078, 0, 0.101961)

[node name="HealthComponent" parent="." instance=ExtResource("4_oxotc")]
START_HEALTH = 1

[node name="BotMeleeAttack" type="Node2D" parent="."]
script = ExtResource("5_35t7t")

[node name="AttackRange" type="Area2D" parent="BotMeleeAttack"]
collision_layer = 2

[node name="AttackRangeShape" type="CollisionShape2D" parent="BotMeleeAttack/AttackRange"]
z_index = 1
position = Vector2(6, 0)
scale = Vector2(1, 8.72)
shape = SubResource("SegmentShape2D_n38ik")

[node name="Countdown" type="Timer" parent="BotMeleeAttack/AttackRange"]
wait_time = 2.0
one_shot = true

[node name="AttackAnimation" type="AnimatedSprite2D" parent="BotMeleeAttack"]
position = Vector2(11, 9.80549e-13)
rotation = 1.57079
scale = Vector2(0.806201, 0.684665)
sprite_frames = SubResource("SpriteFrames_m57wp")
frame_progress = 0.23324

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_detection_radius_body_exited"]
[connection signal="healthDepleated" from="HealthComponent" to="." method="_on_health_component_health_depleated"]
[connection signal="area_entered" from="BotMeleeAttack/AttackRange" to="BotMeleeAttack" method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="BotMeleeAttack/AttackRange" to="BotMeleeAttack" method="_on_attack_range_area_exited"]
[connection signal="body_entered" from="BotMeleeAttack/AttackRange" to="BotMeleeAttack" method="_on_body_entered"]
[connection signal="body_exited" from="BotMeleeAttack/AttackRange" to="BotMeleeAttack" method="_on_attack_range_body_exited"]
[connection signal="animation_finished" from="BotMeleeAttack/AttackAnimation" to="BotMeleeAttack" method="_on_attack_animation_animation_finished"]
[connection signal="animation_looped" from="BotMeleeAttack/AttackAnimation" to="BotMeleeAttack" method="_on_attack_animation_animation_looped"]
